--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -53,7 +53,7 @@
               <%# <%= " コメントのテキスト "%>
               <%= comment.text %>
               <%# <%= link_to "（ ユーザー名 ）", root_path, class: :comment_user %>
-              <% link_to comment.user.name, user_path(@prototype.user.id), class: :comment_user %>
+              <%= link_to comment.user.name, user_path(comment.user.id), class: :comment_user %>
               <%# (current_user.id)%>
             </li>
           <%# // 投稿に紐づくコメントを一覧する処理を記述する %>
